handled null locations

--- a/pipeline_cleaning/WRMD Data/WRMD_data_profiling.ipynb
+++ b/pipeline_cleaning/WRMD Data/WRMD_data_profiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +213,192 @@
        "[3317 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[['patients.address_found', 'patients.county_found', 'patients.city_found']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the data in 'patients.address_found' is not useful for programatically determining lat long coordinates. We want to drop the rows where the address_found starts with a alphabetic character AND either lat_found or lng_found is null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# determine which rows have the 'patients.address_found' column starting with a non-numeric character \n",
+    "# df[df['patients.address_found'].str[0].str.isnumeric() == True]\n",
+    "# Set the 'patients.address_found' column to null for these rows\n",
+    "df.loc[df['patients.address_found'].str[0].str.isnumeric() == False, 'patients.address_found'] = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows where the following columns are empty: 'patients.address_found', 'patients.lat_found', 'patients.long_found'\n",
+    "df = df.dropna(subset=['patients.address_found', 'patients.lat_found', 'patients.lng_found'], how='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert Address to Geolocation\n",
+    "For rows where we have an address but no lat or long info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patients.address_found</th>\n",
+       "      <th>patients.lat_found</th>\n",
+       "      <th>patients.lng_found</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1179 SR-712</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3250 Bust Head Rd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Intersection of Greenway and Rt 7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>109 Keverne Ct.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21024 Fox Hollow Ln.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3312</th>\n",
+       "      <td>225 Sister Chipmunk Ln</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3313</th>\n",
+       "      <td>20333 Tanager Place</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3314</th>\n",
+       "      <td>Found on a walking trail behind Dockside Terra...</td>\n",
+       "      <td>39.040332</td>\n",
+       "      <td>-77.354295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3315</th>\n",
+       "      <td>297 Cedar Mtn. Ln.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3316</th>\n",
+       "      <td>4723 Benjamin Cross Ct.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3311 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 patients.address_found  patients.lat_found  \\\n",
+       "0                                           1179 SR-712                 NaN   \n",
+       "1                                     3250 Bust Head Rd                 NaN   \n",
+       "2                     Intersection of Greenway and Rt 7                 NaN   \n",
+       "3                                       109 Keverne Ct.                 NaN   \n",
+       "4                                  21024 Fox Hollow Ln.                 NaN   \n",
+       "...                                                 ...                 ...   \n",
+       "3312                             225 Sister Chipmunk Ln                 NaN   \n",
+       "3313                                20333 Tanager Place                 NaN   \n",
+       "3314  Found on a walking trail behind Dockside Terra...           39.040332   \n",
+       "3315                                 297 Cedar Mtn. Ln.                 NaN   \n",
+       "3316                            4723 Benjamin Cross Ct.                 NaN   \n",
+       "\n",
+       "      patients.lng_found  \n",
+       "0                    NaN  \n",
+       "1                    NaN  \n",
+       "2                    NaN  \n",
+       "3                    NaN  \n",
+       "4                    NaN  \n",
+       "...                  ...  \n",
+       "3312                 NaN  \n",
+       "3313                 NaN  \n",
+       "3314          -77.354295  \n",
+       "3315                 NaN  \n",
+       "3316                 NaN  \n",
+       "\n",
+       "[3311 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['patients.address_found', 'patients.lat_found', 'patients.lng_found']]"
    ]
   },
   {
@@ -230,6 +409,15 @@
    "source": [
     "# Drop rows where either lat_found or _lng_found is NaN\n",
     "df = df.dropna(subset=['patients.lat_found', 'patients.lng_found'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[p[]]"
    ]
   },
   {
