convert address into lat and long coordinates

--- a/pipeline_cleaning/WRMD Data/WRMD_data_profiling.ipynb
+++ b/pipeline_cleaning/WRMD Data/WRMD_data_profiling.ipynb
@@ -403,6 +403,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unchecked but general direction of code\n",
+    "import geopy\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "loc = Nominatim(user_agent=\"Geopy Library\")\n",
+    "get_loc = loc.geocode(df['patients.address_found'])\n",
+    "print(get_loc.latitute, \"\\n\")\n",
+    "print(get_loc.longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
